--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -16,7 +16,14 @@
       ></p-password>
       <label for="password">Password</label>
     </div>
-    <p-button type="submit" [disabled]="!loginForm.valid" label="Login" class="w-100" styleClass="w-100"></p-button>
-    <span class="">{{ errorMessage }}</span>
+    <p-button
+      type="submit"
+      [disabled]="!loginForm.valid"
+      label="Login"
+      class="w-100"
+      styleClass="w-100"
+      [ngClass]="{ 'is-invalid': errorMessage }"
+    ></p-button>
+    <span class="invalid-feedback">{{ errorMessage }}</span>
   </form>
 </div>
